# gps-v2-bricklet

./: .gitignore  README.rst
datasheets/: GTOP-Firmware Check List_C33-V150709.xlsx
hardware/: gps-v2.1.FCStd  gps-v2.1.kicad_pcb  gps-v2.1.pro  gps-v2.FCStd  gps-v2.kicad_pcb  gps-v2.pro  gps.kicad_pcb  gps.pro  gps.sch
hardware/v2.1/: gps-v2.1.kicad_pcb  gps-v2.1.sch
software/: CMakeLists.txt  changelog  cmake_config_custom.txt  generate_makefile  generate_makefile.bat
software/examples/c/: example_callback.c
software/examples/csharp/: ExampleCallback.cs  ExampleSimple.cs
software/examples/delphi/: ExampleCallback.pas  ExampleSimple.pas
software/examples/go/: example_callback.go  example_simple.go
software/examples/java/: ExampleCallback.java  ExampleSimple.java
software/examples/javascript/: ExampleCallback.html  ExampleCallback.js  ExampleSimple.html  ExampleSimple.js
software/examples/labview/: Example Callback - Coordinates Callback.vi  Example Callback.vi  Example Simple.vi
software/examples/labview/10.0/: Example Callback - Coordinates Callback.vi  Example Callback.vi  Example Simple.vi
software/examples/mathematica/: ExampleCallback.nb  ExampleCallback.nb.txt  ExampleSimple.nb  ExampleSimple.nb.txt
software/examples/matlab/: matlab_example_callback.m  matlab_example_simple.m  octave_example_callback.m  octave_example_simple.m
software/examples/mqtt/: example-callback.txt  example-simple.txt
software/examples/perl/: example_callback.pl  example_simple.pl
software/examples/php/: ExampleCallback.php  ExampleSimple.php
software/examples/python/: example_callback.py  example_simple.py
software/examples/ruby/: example_callback.rb  example_simple.rb
software/examples/rust/: example_callback.rs  example_simple.rs
software/examples/shell/: example-callback.sh  example-simple.sh
software/examples/uc/: example_callback.c  example_simple.c
software/examples/vbnet/: ExampleCallback.vb  ExampleSimple.vb
software/src/: communication.c  communication.h  firefly_x1.c  firefly_x1.h  main.c  minmea.c
software/src/configs/: config.h  config_asf_overwrite.h  config_clocks.h  config_custom_bootloader.h  config_custom_bootstrapper.h  config_firefly_x1.h  config_logging.h  config_spi.h
